Updated Admin Consol

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -61,25 +62,24 @@
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="ahlarry.html">Alh ar'ray</a></li>
-                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
-                                        <li><a href="accentus.html">Accentus</a></li>
-                                        <li><a href="segacite.html">Segacite</a></li>
-                                        <li><a href="cribado.html">Cribado</a></li>
-										<li><a href="msmr.html">Ms/Mr KnowHow</a></li>
+                                        <li><a href="events/ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="events/vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="events/accentus.html">Accentus</a></li>
+                                        <li><a href="events/segacite.html">Segacite</a></li>
+                                        <li><a href="events/cribado.html">Cribado</a></li>
+                                        <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
-                                <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
+                                <li><a href="results.html">Results</a></li>
                                 <li class="has-children">
-                                    <a href="to.html">Contact</a>
+                                    <a href="story.html">Story</a>
                                     <ul class="dropdown">
-                                        <li><a href="evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="dev.html">Developers</a></li>
-                                        <li><a href="contact.html">Send Query</a></li>
+                                        <li><a href="insta.html">Insta Feed</a></li>
+                                        <li><a href="admin/local.php">Editor's Pick</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="about.html">About US</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -100,14 +100,13 @@
             </div>
         </header>
 
-
-       <div class="site-section" data-aos="fade">
+        <div class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <div class="row mb-5">
                             <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Contact Us</h2>
+                                <h2 class="site-section-heading text-center">Say Hello</h2>
                             </div>
                         </div>
                         <div class="row">
@@ -131,7 +130,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-md-12">
-                                            <label class="text-black" for="subject">Subject</label>
+                                            <label class="text-black" for="subject">Mobile No.</label>
                                             <input type="subject" id="subject" class="form-control">
                                         </div>
                                     </div>
@@ -150,46 +149,67 @@
                             </div>
                             <div class="col-lg-3 ml-auto">
                                 <div class="mb-3 bg-white">
-                                    <p class="mb-0 font-weight-bold">Address</p>
-									<p class="mb-0">Training & Placement Cell - BVM</p>
-                                    <p class="mb-4">   4th Floor,B-Block,
-															Birla Vishvakarma Mahavidyalaya,
-															Vallabh Vidyanagar,Anand,
-															Gujarat 388120, India</p>
-                                    <p class="mb-0 font-weight-bold">Phone</p>
-                                    <p class="mb-4"><a href="#">+9714094823</a></p>
+                                    <p class="mb-0 font-weight-bold">To</p>
+                                    <p class="mb-4"><a href="http://www.bvmengineering.ac.in/comman_page1.aspx?page_id=4">Training & Placement Cell - BVM</a></p>
                                     <p class="mb-0 font-weight-bold">Email Address</p>
-                                    <p class="mb-0"><a href="gmail.com">bvmtpc2020@gmail.com</a></p>
-									<div class="mapouter">
-									<section id="contact" class="map">
-									<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></iframe>
-									<br />
-									<small>
-										<a href="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></a>
-									</small>
-									</section><style>.mapouter{text-align:right;height:100%;width:100%;}.map {overflow:hidden;background:none!important;height:100%;width:100%;}</style>
-									</div>
-								</div>
+                                    <p class="mb-0"><a href="https://gmail.com">tpcknowhow19@gmail.com</a></p><br />
+                                    <p class="mb-0 font-weight-bold">Address</p>
+                                    <p class="mb-0"></p>
+                                    <p class="mb-4"> 4th Floor,B-Block,
+                                        Birla Vishvakarma Mahavidyalaya,
+                                        Vallabh Vidyanagar,Anand,
+                                        Gujarat 388120, India</p>
+
+                                    <div class="mapouter">
+                                        <section id="contact" class="map">
+                                            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></iframe>
+                                            <br />
+                                            <small>
+                                                <a href="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></a>
+                                            </small>
+                                        </section>
+                                        <style>
+                                            .mapouter {
+                                                text-align: right;
+                                                height: 100%;
+                                                width: 100%;
+                                            }
+
+                                            .map {
+                                                overflow: hidden;
+                                                background: none !important;
+                                                height: 100%;
+                                                width: 100%;
+                                            }
+
+                                        </style>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-       <div class="footer py-4">
+
+
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    <a href="https://github.com/RajeshPandey057">
+                        <span class="icon">
+                            <i class="fa fa-github"></i>
+                        </span>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
-                    </script> Developed by Assassin007 with <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a>
+                    </script>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
         </div>
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
