--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-        <header class="site-navbar py-3" role="banner">
+ <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -78,14 +79,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li class="has-children">
-                                    <a href="to.html">Contact</a>
-                                    <ul class="dropdown">
-                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="contact/dev.html">Developers</a></li>
-                                        <li><a href="contact/contact.html">Send Query</a></li>
-                                    </ul>
-                                </li>
+                               <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -139,8 +133,8 @@
                     <div class="swiper-slide">
                         <div class="image-wrap">
                             <div class="image-info">
-                                <h2 class="mb-3">Contact US</h2>
-                                <a href="single.html" class="btn btn-outline-white py-2 px-4">Know More</a>
+                                <h2 class="mb-3">About US</h2>
+                                <a href="about.html" class="btn btn-outline-white py-2 px-4">Know More</a>
                             </div>
                             <img src="6_150.jpg" alt="Image">
                         </div>
@@ -148,30 +142,21 @@
                     <div class="swiper-slide">
                         <div class="image-wrap">
                             <div class="image-info">
-                                <h2 class="mb-3">About US</h2>
-                                <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                                <h2 class="mb-3">Story</h2>
+                                <a href="story.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                             </div>
-                            <img src="images/img_5.jpg" alt="Image">
+                            <img src="images/story.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="image-wrap">
                             <div class="image-info">
-                                <h2 class="mb-3">Outcomes</h2>
-                                <a href="single.html" class="btn btn-outline-white py-2 px-4">Know More</a>
+                                <h2 class="mb-3">Contact US</h2>
+                                <a href="contact.html" class="btn btn-outline-white py-2 px-4">Know More</a>
                             </div>
-                            <img src="images/img_6.jpg" alt="Image">
+                            <img src="images/contact.jpg" alt="Image">
                         </div>
                     </div>
-                    <!--- <div class="swiper-slide">
-                    <div class="image-wrap">
-                        <div class="image-info">
-                            <h2 class="mb-3">Travel</h2>
-                            <a href="single.html" class="btn btn-outline-white py-2 px-4">Know More</a>
-                        </div>
-                        <img src="images/img_7.jpg" alt="Image">
-                    </div>
-                </div>--->
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
@@ -181,7 +166,7 @@
         </div>
 
 
-        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
