--- a/about.html
+++ b/about.html
@@ -48,11 +48,12 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-        <header class="site-navbar py-3" role="banner">
+ <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -78,14 +79,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li class="has-children">
-                                    <a href="to.html">Contact</a>
-                                    <ul class="dropdown">
-                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="contact/dev.html">Developers</a></li>
-                                        <li><a href="contact/contact.html">Send Query</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -164,7 +158,7 @@
 
 
 
-        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
