--- a/intro.html
+++ b/intro.html
@@ -52,7 +52,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -78,14 +79,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li class="has-children">
-                                    <a href="to.html">Contact</a>
-                                    <ul class="dropdown">
-                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="contact/dev.html">Developers</a></li>
-                                        <li><a href="contact/contact.html">Send Query</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -106,54 +100,36 @@
             </div>
         </header>
 
-        <div class="" data-aos="fade">
+        <div class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
-                        <div class="row mb-5 site-section">
-                            <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">About Us</h2>
-                            </div>
-                        </div>
                         <div class="row mb-5">
-                            <div class="col-md-7">
-                                <img src="images/img_2.jpg" alt="Images" class="img-fluid">
-                            </div>
-                            <div class="col-md-4 ml-auto">
-                                <h3>Vision And Mission</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus, ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center"> KnowHow'19</h2>
                             </div>
                         </div>
-                        <div class="row site-section">
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
-                                <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
-                                <h2 class="text-black font-weight-light mb-4">Rishabh Shah</h2>
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
-                                <p>
-                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-                                </p>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
-                                <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
-                                <h2 class="text-black font-weight-light mb-4">Ankur Varma</h2>
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
-                                <p>
-                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-                                </p>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
-                                <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
-                                <h2 class="text-black font-weight-light mb-4">Rajesh Pandey</h2>
-                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
-                                <p>
-                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-                                </p>
+                    </div>
+                </div>
+                <div data-aos="fade">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-md-7">
+                                <div class="row mb-5">
+                                    <div class="col-12 ">
+                                        <h2 class="text-black h2 mb-0" style="text-align:center">“If you never try, you will never know.”<br /><br /><img class="col-5" src="images/logo1.png" alt="Images" class="img-fluid" style="align-content: center" /></h2>
+                                    </div>
+                                </div>
+                                <div class="row mb-5">
+                                    <div class="col-md-4 ml-auto">
+                                        <h3>Vision And Mission</h3>
+                                        <p>To train students on industry needs and provide them best opportunities available. Also, to train the students to face the “corporate world” and have a professional career.</p>
+                                    </div>
+                                    <div class="col-md-4 ml-auto">
+                                        <h3>Description</h3>
+                                        <p>“KNOW HOW ’19” is the biggest soft skill development fest organised by “TRAINING & PLACEMENT CELL” - Birla Vishwakarma Mahavidyalaya Engineering College. It consist events designed to bring the best out of the students and provide them the basic knowledge about the placement procedure. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -163,7 +139,7 @@
 
 
 
-        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
