--- a/story.html
+++ b/story.html
@@ -52,7 +52,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -78,14 +79,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li class="has-children">
-                                    <a href="to.html">Contact</a>
-                                    <ul class="dropdown">
-                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="contact/dev.html">Developers</a></li>
-                                        <li><a href="contact/contact.html">Send Query</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -105,7 +99,19 @@
                 </div>
             </div>
         </header>
-
+        <div class="site-section" data-aos="fade">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="row mb-5">
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center"> Find Yourself</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid" data-aos="fade" data-aos-delay="500">
             <div class="swiper-container images-carousel">
                 <div class="swiper-wrapper">
@@ -115,7 +121,7 @@
                                 <h2 class="mb-3">Instagram</h2>
                                 <a href="insta.html" class="btn btn-outline-white py-2 px-4">See Pics</a>
                             </div>
-                            <img src="images/img_1.jpg" alt="Image">
+                            <img src="images/insta.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -124,16 +130,22 @@
                                 <h2 class="mb-3">Editors Pick</h2>
                                 <a href="admin/local.php" class="btn btn-outline-white py-2 px-4">See Pics</a>
                             </div>
-                            <img src="images/img_2.jpg" alt="Image">
+                            <img src="images/local.jpg" alt="Image">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="image-wrap">
+                            <div class="image-info">
+                                <h2 class="mb-3">Facebook Page</h2>
+                                <a href="https://www.facebook.com/bvmcollegetpc" class="btn btn-outline-white py-2 px-4">See Pics</a>
+                            </div>
+                            <img src="images/FB.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
