Added Database Connectivity

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
- <header class="site-navbar py-3" role="banner">
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
@@ -79,7 +79,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                               <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -166,7 +166,7 @@
         </div>
 
 
-<div class="footer py-4">
+ <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -207,5 +207,4 @@
 
     </script>
 </body>
-
 </html>
