--- a/insta.html
+++ b/insta.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-		<div class="footer py-4">
+ <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
