--- a/intro.html
+++ b/intro.html
@@ -117,16 +117,16 @@
                             <div class="col-md-7">
                                 <div class="row mb-5">
                                     <div class="col-12 ">
-                                        <h2 class="text-black h2 mb-0" style="text-align:center">“If you never try, you will never know.”<br /><br /><img class="col-5" src="images/logo1.png" alt="Images" class="img-fluid" style="align-content: center" /></h2>
+                                        <h2 class="text-black h2 mb-0" style="text-align:center"><img class="col-9" src="images/logo1.png" alt="Images" class="img-fluid" style="align-content: center" /></h2>
                                     </div>
                                 </div>
                                 <div class="row mb-5">
                                     <div class="col-md-4 ml-auto">
-                                        <h3>Vision And Mission</h3>
+                                        <h3><b>Vision And Mission</b></h3>
                                         <p>To train students on industry needs and provide them best opportunities available. Also, to train the students to face the “corporate world” and have a professional career.</p>
                                     </div>
                                     <div class="col-md-4 ml-auto">
-                                        <h3>Description</h3>
+                                        <h3><b>Description</b></h3>
                                         <p>“KNOW HOW ’19” is the biggest soft skill development fest organised by “TRAINING & PLACEMENT CELL” - Birla Vishwakarma Mahavidyalaya Engineering College. It consist events designed to bring the best out of the students and provide them the basic knowledge about the placement procedure. </p>
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
 
 
 
-<div class="footer py-4">
+ <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
