--- a/contact.html
+++ b/contact.html
@@ -111,27 +111,27 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-8 mb-5">
-                                <form action="#">
+                                <form action="mail/tem.php" method="post" role="form">
                                     <div class="row form-group">
                                         <div class="col-md-6 mb-3 mb-md-0">
                                             <label class="text-black" for="fname">First Name</label>
-                                            <input type="text" id="fname" class="form-control">
+                                            <input type="text" id="fname" class="form-control" name="fname">
                                         </div>
                                         <div class="col-md-6">
                                             <label class="text-black" for="lname">Last Name</label>
-                                            <input type="text" id="lname" class="form-control">
+                                            <input type="text" id="lname" class="form-control" name="lname">
                                         </div>
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-md-12">
                                             <label class="text-black" for="email">Email</label>
-                                            <input type="email" id="email" class="form-control">
+                                            <input type="email" id="email" class="form-control" name="email">
                                         </div>
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-md-12">
-                                            <label class="text-black" for="subject">Mobile No.</label>
-                                            <input type="subject" id="subject" class="form-control">
+                                            <label class="text-black" for="mno">Mobile No.</label>
+                                            <input type="text" id="mno" class="form-control" name="mno">
                                         </div>
                                     </div>
                                     <div class="row form-group">
