--- a/events.html
+++ b/events.html
@@ -1,45 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <link rel="icon" type="image/ico" href="images/logo.png" />
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/lightgallery.min.css">
+    <link rel="stylesheet" href="css/lightgallery.min.css">    
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        @media screen and (max-width: 768px) {
-            #menu-toggle:checked+.nav-menu {
-                display: block;
-            }
-        }
-
-        .hero-body>.container {
-            padding: 0 10px;
-        }
-
-    </style>
-</head>
-
-<body>
-    <div class="site-wrap">
+  </head>
+  <body>
+<div class="site-wrap">
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -48,7 +29,7 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
- <header class="site-navbar py-3" role="banner">
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
@@ -79,7 +60,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About US</a></li>
-                               <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -99,31 +80,22 @@
                 </div>
             </div>
         </header>
-    </div>
-    <!-- GRID SYSTEM -->
-    <div class="site-section" data-aos="fade">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-md-7">
-                    <div class="row mb-5">
-                        <div class="col-12 ">
-                            <h2 class="site-section-heading text-center">Events</h2>
-                        </div>
-                    </div>
-                </div>
+
+
+
+  <div class="site-section"  data-aos="fade">
+    <div class="container-fluid">
+      
+      <div class="row justify-content-center">
+        <div class="col-md-7">
+          <div class="row mb-5">
+            <div class="col-12 ">
+              <h2 class="site-section-heading text-center">Events</h2>
             </div>
-            <div data-aos="fade">
-                <div class="container-fluid">
-                    <div class="row justify-content-center">
-                        <div class="col-md-7">
-                            <div class="row mb-5">
-                                <div class="col-12 ">
-                                    <h2 class="text-black h2 mb-0" style="text-align:center">Enter The Competition</h2>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/ahlarry.html">
+          </div>
+         <div class="row">
+            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Ahl ar-Ra'y</h3>
                                             <p><strong class="font-weight-bold text-primary" style="color: black">“People of Opinion”</strong></p>
@@ -132,8 +104,8 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/vyakti.html">
+           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Vyaktitvam</h3>
                                             <p><strong class="font-weight-bold text-primary" style="color: black">“All that you need to know, is within you”</strong></p>
@@ -142,7 +114,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                     <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Accentus</h3>
@@ -152,7 +124,8 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+
+             <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                     <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/segacite.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Segacite</h3>
@@ -162,7 +135,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                     <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/cribado.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Cribado</h3>
@@ -172,62 +145,48 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                     <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/msmr.html">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                                             <h3 class="text-black h4">Ms/Mr KnowHow</h3>
                                             <p><strong class="font-weight-bold text-primary" style="color: black">“Win the occasion”</strong></p>
-                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
-                                            <p><strong class="font-weight-bold text-primary">₹</strong></p>
+                                            <p style="color: black">To identify the best of the best.</p>
+                                            <p><strong class="font-weight-bold text-primary"></strong></p>
                                         </a>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-<div class="footer py-4">
-            <div class="container-fluid text-center">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <a href="https://github.com/RajeshPandey057">
-                        <span class="icon">
-                            <i class="fa fa-github"></i>
-                        </span>
-                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>
-                        document.write(new Date().getFullYear());
 
-                    </script>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#lightgallery').lightGallery();
-        });
+  </div>  
+  </div>
 
-    </script>
-</body>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/aos.js"></script>
 
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/lightgallery-all.min.js"></script>
+  <script src="js/jquery.mousewheel.min.js"></script>
+
+  <script src="js/main.js"></script>
+  
+  <script>
+    $(document).ready(function(){
+      $('#lightgallery').lightGallery();
+    });
+  </script>
+    
+  </body>
 </html>
