Added Image Display

--- a/Admin/login.html
+++ b/Admin/login.html
@@ -129,7 +129,7 @@
             </div>
         </div>
 
-        <div class="footer py-4">
+ <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -137,7 +137,7 @@
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -146,6 +146,7 @@
                 </p>
             </div>
         </div>
+
     
 
     
