--- a/events/events - Copy.html
+++ b/events/events - Copy.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/ico" href="../images/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="../fonts/icomoon/style.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/magnific-popup.css">
@@ -21,25 +22,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        @media screen and (max-width: 768px) {
-            #menu-toggle:checked+.nav-menu {
-                display: block;
-            }
-        }
-
-        .hero-body>.container {
-            padding: 0 10px;
-        }
-
-    </style>
 </head>
 
 <body>
+
     <div class="site-wrap">
+
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -48,30 +36,36 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-        <header class="site-navbar py-3" role="banner">
+
+
+
+
+        <header class="site-navbar py-3 border-bottom" role="banner">
+
             <div class="container-fluid">
                 <div class="row align-items-center">
+
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <img class="col-4" src="../images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
                         <h1 class="mb-0"><a href="../intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
+
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="../index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="../events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="ahlarry.html">Ahl ar'ray</a></li>
-                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
-                                        <li><a href="accentus.html">Accentus</a></li>
-                                        <li><a href="segacite.html">Segacite</a></li>
-                                        <li><a href="cribado.html">Cribado</a></li>
-                                        <li><a href="msmr.html">Ms/Mr KnowHow</a></li>
+                                        <li><a href="../events/ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="../events/vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="../events/accentus.html">Accentus</a></li>
+                                        <li><a href="../events/segacite.html">Segacite</a></li>
+                                        <li><a href="../events/cribado.html">Cribado</a></li>
+                                        <li><a href="../events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="../results.html">Results</a></li>
-                                <li><a href="../about.html">About US</a></li>
+                                <li><a href="../admin/results.php">Results</a></li>
                                 <li class="has-children">
                                     <a href="../story.html">Story</a>
                                     <ul class="dropdown">
@@ -79,10 +73,12 @@
                                         <li><a href="../admin/local.php">Editor's Pick</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="../about.html">About US</a></li>
                                 <li><a href="../contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
+
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -96,82 +92,82 @@
                         </div>
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
                     </div>
+
                 </div>
             </div>
+
         </header>
-        <!-- GRID SYSTEM -->
+
+
+
         <div class="site-section" data-aos="fade">
             <div class="container-fluid">
+
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <div class="row mb-5">
                             <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Ms/Mr KnowHow</h2>
+                                <h2 class="site-section-heading text-center">Events</h2>
                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                        <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                        <h3 class="text-black h4">Ahl ar-Ra'y</h3>
+                                        <p><strong class="font-weight-bold text-primary" style="color: black">“People of Opinion”</strong></p>
+                                        <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                        <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                        <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                        <h3 class="text-black h4">Vyaktitvam</h3>
+                                        <p><strong class="font-weight-bold text-primary" style="color: black">“All that you need to know, is within you”</strong></p>
+                                        <p style="color: black">Participant’s personality and the ability to move an abstract idea into a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
+                                        <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                        <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                        <h3 class="text-black h4">Accentus</h3>
+                                        <p><strong class="font-weight-bold text-primary" style="color: black">“Why so serious?”</strong></p>
+                                        <p style="color: black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
+                                        <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                    </a>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
-                <div data-aos="fade">
-                    <div class="container-fluid">
-                        <div class="row justify-content-center">
-                            <div class="col-md-7">
-                                <div class="row mb-5">
-                                    <div class="col-12 ">
-                                        <h2 class="text-black h2 mb-0" style="text-align:center">“Win the occasion”</h2>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Don't Know How? No need to be woried. We've got you covered.</h3>
-                                            <p><strong class="font-weight-bold text-primary">Encrypted</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Just participate in all five events and you might be the lucky one!</h3>
-                                            <p><strong class="font-weight-bold text-primary">Encrypted</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">On Closing ceremony, Ms/Mr. KnowHow will be announced.</h3>
-                                            <p><strong class="font-weight-bold text-primary">Encrypted</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="row justify-content-center ">
+                    <span class=" mdl-chip mdl-chip--contact mdl-chip--deletable">
+                        <img class="mdl-chip__contact" src="images/about/RL.jpg" />
+                        <span class="mdl-chip__text">Rahul Chinchiy:9898610839</span>
+                    </span>
+                    <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
+                        <img class="mdl-chip__contact" src="images/about/RL.jpg" />
+                        <span class="mdl-chip__text">Rahul Chinchiy:9898610839</span>
+                    </span>
+                    <span class="mdl-chip mdl-chip--contact mdl-chip--deletable">
+                        <img class="mdl-chip__contact" src="images/about/RL.jpg" />
+                        <span class="mdl-chip__text">Rahul Chinchiy:9898610839</span>
+                    </span></div>
             </div>
         </div>
 
-        <div class="footer py-4">
-            <div class="container-fluid text-center">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <a href="https://github.com/RajeshPandey057">
-                        <span class="icon">
-                            <i class="fa fa-github"></i>
-                        </span>
-                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>
-                        document.write(new Date().getFullYear());
 
-                    </script>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
-        </div>
+
 
 
     </div>
+
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../js/jquery-ui.js"></script>
