--- a/story.html
+++ b/story.html
@@ -51,7 +51,6 @@
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="index.html">Home</a></li>
-								<li><a href="intro.html">Intro</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -145,7 +144,7 @@
             </div>
         </div>
 
-        <div class="footer py-4">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -153,7 +152,7 @@
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
